<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".SearchingFragment">

    <Button
        android:id="@+id/searchingBtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/searching_btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/searchingRdGrpTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchingBtnClose">
        <RadioButton
            android:id="@+id/searchingRdBtnNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_rdGrp_now" />
        <RadioButton
            android:id="@+id/searchingRdBtn5min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_rdGrp_5min" />
        <RadioButton
            android:id="@+id/searchingRdBtn10min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_rdGrp_10min" />
        <RadioButton
            android:id="@+id/searchingRdBtn60min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_rdGrp_60min" />
    </RadioGroup>
    <TextView
        android:id="@+id/searchingTxtUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching_txt_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchingRdGrpTime" />

    <TextView
        android:id="@+id/searchingTxtSearch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/searching_txt_searching_blank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchingTxtUrl" />

    <Button
        android:id="@+id/searchingBtnSearch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:focusableInTouchMode="true"
        android:text="@string/searching_btn_searching"
        app:layout_constraintStart_toEndOf="@+id/searchingTxtSearch1"
        app:layout_constraintTop_toBottomOf="@+id/searchingTxtUrl"  />
    <requestFocus/>

    <WebView
        android:id="@+id/searchingWbVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchingBtnClose" />

</androidx.constraintlayout.widget.ConstraintLayout>